--- a/client/index.html
+++ b/client/index.html
@@ -8,8 +8,8 @@
   <script>
   var config = {
     type: Phaser.AUTO,
-    width: 800,
-    height: 600,
+    width: 1280,
+    height: 720,
     physics: {
       default: 'arcade',
       arcade: {
@@ -22,11 +22,12 @@
     }
   };
 
-  var game = new Phaser.Game(config);
-  var my_address;
-  var button;
-  var background;
-  var dice_result;
+  var game = new Phaser.Game(config)
+  var my_address
+  var button
+  var background
+  var dice_result
+  var _this
 
   function preload ()
   {
@@ -43,40 +44,58 @@
     this.load.image('5', 'assets/5.png');
     this.load.image('6', 'assets/6.png');
     this.load.image('approve', 'assets/approve.png');
+    this.load.image('oracle', 'assets/oracle_small/oracle.png');
+    this.load.image('crystal_ball', 'assets/oracle_small/crystal_ball.png');
+    this.load.image('hand_right', 'assets/oracle_small/hand_right.png');
+    this.load.image('hand_left', 'assets/oracle_small/hand_left.png');
+    this.load.image('dragonTexture', 'assets/creature/dragon.png');
+    this.load.json('dragonMesh', 'assets/creature/dragon.json');
   }
+
+  var dragon = null;
 
   function create ()
   {
-    this.add.image(400, 300, 'sky');
+    _this = this
 
-    var particles = this.add.particles('red');
-
-    var emitter = particles.createEmitter({
-      speed: 100,
-      scale: { start: 1, end: 0 },
-      blendMode: 'ADD'
-    });
-
-    var logo = this.physics.add.image(400, 100, 'logo');
+    dice_result = this.add.image(999400, 100, '6');
     
-    dice_result = this.add.image(400, 100, '6');
+    oracle = this.add.image(650, 290, 'oracle');    
     
-    my_address = this.add.text(20, 50, "Text Objects", { font: "62px Arial Black", fill: "#c51b7d" });
+    my_address = this.add.text(20, 50, "", { font: "62px Arial Black", fill: "#c51b7d" });
     this.physics.add.existing(my_address);
 
     my_address.body.setVelocity(100, 200);
     my_address.body.setBounce(1, 1);
     my_address.body.setCollideWorldBounds(true);
 
-    this.rollBtn = this.add.sprite(100, 100, 'button').setInteractive();
-    this.rollBtn.on('pointerdown', function (event) {
-      roll()
-    });
-
+    /*
     this.approveBtn = this.add.sprite(600, 500, 'approve').setInteractive();
     this.approveBtn.on('pointerdown', function (event) {
       approve()
     });
+    */
+
+    setupLeftHand()
+    setupRightHand()
+
+
+    this.rollBtn = this.add.sprite(650, 520, 'crystal_ball').setInteractive();
+    this.rollBtn.on('pointerdown', function (event) {
+      roll()
+    });
+    this.rollBtn.on('pointerover', function (event) {
+      console.log(_this.rollBtn)
+      _this.rollBtn.scaleX = 1.2
+      _this.rollBtn.scaleY = 1.2
+      _this.rollBtn.blendMode = "XOR"
+    });
+    this.rollBtn.on('pointerout', function (event) {
+      _this.rollBtn.scaleX = 1.0
+      _this.rollBtn.scaleY = 1.0
+    });
+
+
   }
 
   function setDice(result)
@@ -86,6 +105,40 @@
       my_address.text = "You win 35 TGN!"
     else
     my_address.text = ""
+  }
+
+  function setupLeftHand()
+  {
+    var floating_range = 40
+    var image = _this.add.image(400, 390, 'hand_left');
+    var timeline = _this.tweens.createTimeline();
+    timeline.loop = -1
+    timeline.add({
+        targets: image,
+        x: image.x,
+        y: image.y + floating_range,
+        ease: 'Sinusoidal',
+        duration: 1500,
+        yoyo: true
+    });
+    timeline.play()
+  }
+
+  function setupRightHand()
+  {
+    var floating_range = 40
+    var image = _this.add.image(800, 390-floating_range, 'hand_right');
+    var timeline = _this.tweens.createTimeline();
+    timeline.loop = -1
+    timeline.add({
+        targets: image,
+        x: image.x,
+        y: image.y - floating_range,
+        ease: 'Sinusoidal',
+        duration: 1500,
+        yoyo: true
+    });
+    timeline.play()
   }
     </script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
