--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
   </head>
-  <body>
+  <body style="background-image: url('https://cdn.discordapp.com/attachments/841800009229795349/852392091862433822/Living_Room.png');">
+    <div ></div>
     <div id="navbar"></div>
   </body>
 </html>
