--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,9 @@
     <div id="navbar"></div>
   </body>
   <button class="button" onclick="document.getElementById('rules_modal').classList.add('is-active')">Rules</button>
+  <button class="button" onclick="onAClicked()">A</button>
+  <button class="button" onclick="onBClicked()">B</button>
+  <input id="bet_amount" onkeyup="onBetAmountUpdate()">B class="input" type="text" value="0.1">
   <div id="rules_modal" class="modal">
     <div class="modal-background"></div>
     <div class="modal-card">
