--- a/client/html/navbar.html
+++ b/client/html/navbar.html
@@ -21,7 +21,7 @@
         <p><i class="fas fa-exclamation-triangle"></i> Wrong network, please connect to matic network</p>
       </div>
       <div id="wallet-disconnected" style="display: none">
-        <p id="my-balancex" class="level-item">
+        <p id="my-balance" class="level-item">
           <a id="connect-button" class="button is-primary is-outlined" onclick="connectWallet()">
             <span class="icon">
               <i class="fas fa-wallet"></i>
