moved coins to html

--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
   <button class="button" onclick="document.getElementById('rules_modal').classList.add('is-active')">Rules</button>
   <button class="button" onclick="onAClicked()">A</button>
   <button class="button" onclick="onBClicked()">B</button>
-  <input id="bet_amount" onkeyup="onBetAmountUpdate()">B class="input" type="text" value="0.1">
+  <input id="bet_amount" class="input" type="text" onkeyup="onBetAmountUpdate()" value="0.1">
   <div id="rules_modal" class="modal">
     <div class="modal-background"></div>
     <div class="modal-card">
