--- a/client/html/navbar.html
+++ b/client/html/navbar.html
@@ -5,6 +5,7 @@
       <div id="logout-button" class="level-item p-2" style="display: none">
         <p class="subtitle is-5">
           <a onclick="_disconnectWallet()"><i class="fas fa-wallet"></i> Logout</a>
+          <a id="rules_button">Rules</a>
         </p>
       </div>
     </div>
