showing the min and max bet in rules modal

--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,7 @@
             <p class="modal-card-title">Modal title</p>
             <button onclick="document.getElementById('rules_modal').classList.remove('is-active')" class="delete" aria-label="close"></button>
           </header>
-          <section class="modal-card-body">
+          <section id="modal_text" class="modal-card-body">
             <!-- Content ... -->
             Lorem ipsum
           </section>
