--- a/client/index.html
+++ b/client/index.html
@@ -32,9 +32,11 @@
           <div id="phaser_canvas"></div>
         </div>
         <div class="column is-one-third-desktop">
-          <button class="button" onclick="onAClicked()">A</button>
-          <button class="button" onclick="onBClicked()">B</button>
+          <h1 class="title">Place your bet</h1>
+          <button class="button" onclick="onAClicked()">Bet for a bland bread</button>
+          <button class="button" onclick="onBClicked()">Bet for a burned bread</button>
           <input id="bet_amount" class="input" type="text" onkeyup="onBetAmountUpdate()" value="0.1">
+          <a onclick="onMaxClicked()">Max</a>
         </div>
       </div>
     </div>
