switched ui text to html

--- a/client/index.html
+++ b/client/index.html
@@ -27,6 +27,7 @@
           </section>
         </div>
       </div>
+      <p id="status"></p>
       <div class="columns is-desktop is-vcentered">
         <div class="column is-two-thirds-desktop">
           <div id="phaser_canvas"></div>
