added min button

--- a/client/index.html
+++ b/client/index.html
@@ -39,6 +39,7 @@
             <div class="control">
               <input id="bet_amount" class="input" type="text" value="">
               <a onclick="onMaxClicked()">Max</a>
+              <a onclick="onMinClicked()">Min</a>
             </div>
           </div>
           <button class="button" onclick="onAClicked()">Bet for a bland bread</button>
