--- a/client/index.html
+++ b/client/index.html
@@ -28,22 +28,29 @@
         </div>
       </div>
       <p id="status"></p>
-      <div class="columns is-desktop is-vcentered">
+      <div class="columns is-desktop">
         <div class="column is-two-thirds-desktop">
           <div id="phaser_canvas"></div>
         </div>
         <div class="column is-one-third-desktop">
-          <h1 class="title">Place your bet</h1>
-          <div class="field">
-            <label class="label">Bet (in Matic)</label>
-            <div class="control">
-              <input id="bet_amount" class="input" type="text" value="">
-              <a onclick="onMaxClicked()">Max</a>
-              <a onclick="onMinClicked()">Min</a>
+          <div class="card">
+            <div class="card-content">
+              <div class="content">
+                <h1 class="title">Place your bet</h1>
+                <div class="field">
+                  <label class="label">Bet (in Matic)</label>
+                  <div class="control">
+                    <input id="bet_amount" class="input" type="text" value="">
+                    <a onclick="onMaxClicked()">Max</a>
+                    <a onclick="onMinClicked()">Min</a>
+                  </div>
+                </div>
+                <label class="label">How is the bread going to be toasted?</label>
+                <button class="button" onclick="onAClicked()">Bet for bland</button>
+                <button class="button" onclick="onBClicked()">Bet for burned</button>
+              </div>
             </div>
           </div>
-          <button class="button" onclick="onAClicked()">Bet for a bland bread</button>
-          <button class="button" onclick="onBClicked()">Bet for a burned bread</button>
         </div>
       </div>
     </div>
