--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
       html {
         background-repeat: repeat;
         height: 100%;
-        background-image: url("/src/assets/background.jpg");
+        background-image: url("/src/assets/background.png");
       }
       </style>
   </head>
