--- a/client/index.html
+++ b/client/index.html
@@ -23,7 +23,7 @@
           </header>
           <section id="modal_text" class="modal-card-body">
             <!-- Content ... -->
-            Lorem ipsum
+            Loading rules...
           </section>
         </div>
       </div>
@@ -36,18 +36,18 @@
           <div class="card">
             <div class="card-content">
               <div class="content">
-                <h1 class="title">Place your bet</h1>
+                <h1 class="title is-size-1-touch">Place your bet</h1>
                 <div class="field">
-                  <label class="label">Bet (in Matic)</label>
+                  <label class="label is-size-4-touch">Bet (in Matic)</label>
                   <div class="control">
-                    <input id="bet_amount" class="input" type="text" value="">
-                    <a onclick="onMaxClicked()">Max</a>
-                    <a onclick="onMinClicked()">Min</a>
+                    <input id="bet_amount" class="input is-size-3-touch" type="text" value="">
+                    <a class="is-size-4-touch" onclick="onMaxClicked()">Max</a>
+                    <a class="is-size-4-touch" onclick="onMinClicked()">Min</a>
                   </div>
                 </div>
-                <label class="label">How is the bread going to be toasted?</label>
-                <button class="button" onclick="onAClicked()">Bet for bland</button>
-                <button class="button" onclick="onBClicked()">Bet for burned</button>
+                <label class="label is-size-4-touch">How is the bread going to be toasted?</label>
+                <button class="button is-link is-size-3-touch" onclick="onAClicked()">Bet for bland</button>
+                <button class="button is-link is-size-3-touch" onclick="onBClicked()">Bet for burned</button>
               </div>
             </div>
           </div>
