--- a/client/html/navbar.html
+++ b/client/html/navbar.html
@@ -7,14 +7,14 @@
           <!--
           <a onclick="_disconnectWallet()"><i class="fas fa-wallet"></i> Logout</a>
           -->
-          <a id="rules_button">Rules</a>
+          <a class="is-size-2-touch" id="rules_button">Rules</a>
         </p>
       </div>
     </div>
     <!-- Right side -->
     <div class="level-right">
       <div id="wallet-connected" style="display: none">
-        <p id="my-address" class="level-item button is-info is-outlined"></p>
+        <p id="my-address" class="level-item button is-info is-outlined is-size-3-touch"></p>
       </div>
       <div id="loading-web3">
         <p>Loading web3...</p>
