--- a/client/html/navbar.html
+++ b/client/html/navbar.html
@@ -20,7 +20,7 @@
         <p>Loading web3...</p>
       </div>
       <div id="wrong-network" style="display: none">
-        <p><i class="fas fa-exclamation-triangle"></i> Wrong network, please connect to matic network</p>
+        <p class="is-size-2-touch"><i class="fas fa-exclamation-triangle"></i> Wrong network, please connect to matic network</p>
       </div>
       <div id="wallet-disconnected" style="display: none">
           <a id="connect-button" class="button is-primary is-outlined" onclick="connectWallet()">
