--- a/client/index.html
+++ b/client/index.html
@@ -27,7 +27,6 @@
           </section>
         </div>
       </div>
-      <p id="status"></p>
       <div class="columns is-desktop">
         <div class="column is-two-thirds-desktop">
           <div id="phaser_canvas"></div>
@@ -37,6 +36,7 @@
             <div class="card-content">
               <div class="content">
                 <h1 class="title is-size-1-touch">Place your bet</h1>
+                <p class="is-size-2-touch" id="status"></p>
                 <div class="field">
                   <label class="label is-size-4-touch">Bet (in Matic)</label>
                   <div class="control">
