--- a/client/index.html
+++ b/client/index.html
@@ -18,12 +18,12 @@
         <div class="modal-background"></div>
         <div id="rules_modal_card" class="modal-card">
           <header class="modal-card-head">
-            <p class="modal-card-title">Modal title</p>
+            <p class="modal-card-title">How to play</p>
             <button onclick="document.getElementById('rules_modal').classList.remove('is-active')" class="delete" aria-label="close"></button>
           </header>
           <section id="modal_text" class="modal-card-body">
             <!-- Content ... -->
-            Loading rules...
+            Test test
           </section>
         </div>
       </div>
