--- a/client/index.html
+++ b/client/index.html
@@ -21,9 +21,11 @@
             <p class="modal-card-title">How to play</p>
             <button onclick="document.getElementById('rules_modal').classList.remove('is-active')" class="delete" aria-label="close"></button>
           </header>
-          <section id="modal_text" class="modal-card-body">
+          <section class="modal-card-body">
             <!-- Content ... -->
-            Test test
+            <p>Will the bread be too bland or too toasted? Place your bet and earn Polygon Matic!</p>
+            <p>This game is a decentralized trustless "coin flip" game that combines Polygon's low transaction fees with Chainlink's verified random number generator.</p>
+            <p id="modal_text"></p>
           </section>
         </div>
       </div>
