--- a/client/index.html
+++ b/client/index.html
@@ -23,7 +23,7 @@
           </header>
           <section class="modal-card-body">
             <!-- Content ... -->
-            <p>Will the bread be too bland or too toasted? Place your bet and earn Polygon Matic!</p>
+            <p>xWill the bread be too bland or too toasted? Place your bet and earn Polygon Matic!</p>
             <p>This game is a decentralized trustless "coin flip" game that combines Polygon's low transaction fees with Chainlink's verified random number generator.</p>
             <p id="modal_text"></p>
           </section>
