--- a/client/html/navbar.html
+++ b/client/html/navbar.html
@@ -1,35 +1,73 @@
 <!-- Main container -->
 <nav class="level">
-    <!-- Left side -->
-    <div class="level-left">
-      <div id="logout-button" class="level-item p-2" style="display: none">
-        <p class="subtitle is-5">
-          <!--
-          <a onclick="_disconnectWallet()"><i class="fas fa-wallet"></i> Logout</a>
-          -->
-          <a class="is-size-2-touch" id="rules_button">Rules</a>
-        </p>
+  <!-- Left side -->
+  <div class="level-left">
+    <div id="logout-button" class="level-item p-2" style="display: none">
+      <p class="subtitle is-5">
+        <!--
+        <a onclick="_disconnectWallet()"><i class="fas fa-wallet"></i> Logout</a>
+        <a class="is-size-2-touch" id="rules_button">Rules</a>
+      -->
+      </p>
+    </div>
+  </div>
+  <!-- Right side -->
+  <div class="level-right">
+    <div id="wallet-connected" style="display: none">
+      <p id="my-address" class="level-item button is-info is-outlined is-size-3-touch"></p>
+    </div>
+    <div id="loading-web3">
+      <p>Loading web3...</p>
+    </div>
+    <div id="wrong-network" style="display: none">
+      <p class="is-size-2-touch"><i class="fas fa-exclamation-triangle"></i> Wrong network, please connect to matic network</p>
+    </div>
+    <div id="wallet-disconnected" style="display: none">
+        <a id="connect-button" class="button is-primary is-outlined" onclick="connectWallet()">
+          <span class="icon">
+            <i class="fas fa-wallet"></i>
+          </span>
+          <span>Connect</span>
+        </a>
+      </p>
+    </div>
+    <div class="navbar-item has-dropdown is-hoverable">
+      <a class="navbar-link">
+        More
+      </a>
+      <div class="navbar-dropdown">
+        <a class="navbar-item" href="#">
+          <span class="icon">
+            <i class="fas fa-info-circle"></i>
+          </span>
+          <span>About</span>
+        </a>
+        <a class="navbar-item" id="rules_button">
+          <span class="icon">
+            <i class="fas fa-check-square"></i>
+          </span>
+          <span>Rules</span>
+        </a>
+        <hr class="navbar-divider">
+        <a class="navbar-item" target="_blank" href="https://github.com/BlockchainTestground/Breadacle">
+          <span class="icon">
+            <i class="fas fa-code"></i>
+          </span>
+          <span>Code</span>
+        </a>
+        <a class="navbar-item" target="_blank" href="https://polygonscan.com/address/0x87A070cFE33d69936D2aA552161AAeE66d691703">
+          <span class="icon">
+            <i class="fas fa-file-contract"></i>
+          </span>
+          <span>Contract</span>
+        </a>
+        <a class="navbar-item" target="_blank" href="https://discord.gg/NHCWY57dea">
+          <span class="icon">
+            <i class="fab fa-discord"></i>
+          </span>
+          <span>Discord</span>
+        </a>
       </div>
     </div>
-    <!-- Right side -->
-    <div class="level-right">
-      <div id="wallet-connected" style="display: none">
-        <p id="my-address" class="level-item button is-info is-outlined is-size-3-touch"></p>
-      </div>
-      <div id="loading-web3">
-        <p>Loading web3...</p>
-      </div>
-      <div id="wrong-network" style="display: none">
-        <p class="is-size-2-touch"><i class="fas fa-exclamation-triangle"></i> Wrong network, please connect to matic network</p>
-      </div>
-      <div id="wallet-disconnected" style="display: none">
-          <a id="connect-button" class="button is-primary is-outlined" onclick="connectWallet()">
-            <span class="icon">
-              <i class="fas fa-wallet"></i>
-            </span>
-            <span>Connect</span>
-          </a>
-        </p>
-      </div>
-    </div>
-  </nav>
+  </div>
+</nav>
