--- a/client/html/navbar.html
+++ b/client/html/navbar.html
@@ -1,10 +1,8 @@
 <nav class="navbar is-transparent is-size-5-touch"">
   <div class="navbar-brand is-size-5-touch navbar-end">
-    <!--
-    <a class="navbar-item" href="https://bulma.io">
-      <img src="https://bulma.io/images/bulma-logo.png" alt="Bulma: a modern CSS framework based on Flexbox" width="112" height="28">
+    <a class="navbar-item" href="/">
+      <img src="/src/assets/logo.png" alt="Breadacle" height="28">
     </a>
-    -->
     <div class="navbar-burger burger is-bigger is-size-5-touch" data-target="navbarExampleTransparentExample">
       <i class="fas fa-bars fa-2x"></i>
     </div>
