--- a/client/html/navbar.html
+++ b/client/html/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar is-transparent is-size-5-touch"">
   <div class="navbar-brand is-size-5-touch navbar-end">
     <a class="navbar-item" href="/">
-      <img src="/src/assets/logo.png" alt="Breadacle" height="28">
+      <img src="/src/assets/logo_and_text.png" alt="Breadacle" height="28">
     </a>
     <div class="navbar-burger burger is-bigger is-size-5-touch" data-target="navbarExampleTransparentExample">
       <i class="fas fa-bars fa-2x"></i>
@@ -40,12 +40,6 @@
             <i class="fas fa-bars is-hidden-touch"></i>
           </a>
           <div class="navbar-dropdown is-boxed is-size-3-touch">
-            <a class="navbar-item" href="#">
-              <span class="icon">
-                <i class="fas fa-info-circle"></i>
-              </span>
-              <span>About</span>
-            </a>
             <a class="navbar-item" id="rules_button">
               <span class="icon">
                 <i class="fas fa-check-square"></i>
