--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <title>Breadacle</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="icon" href="/src/assets/favicon.ico" type="image/x-icon">
@@ -17,6 +18,8 @@
   <body>
     <div id="container" class="container">
       <div id="navbar"></div>
+      <h2 class="title is-4 is-size-5-touch has-text-centered">Provably-fair guess game</h2>
+      <h3 class="subtitle is-5 is-size-6-touch has-text-centered">Earn Matic using Chainlink's verifiable random numbers on Polygon's low gas chain</h3>
       <div id="rules_modal" class="modal">
         <div class="modal-background"></div>
         <div id="rules_modal_card" class="modal-card">
