--- a/client/index.html
+++ b/client/index.html
@@ -19,7 +19,7 @@
     <div id="container" class="container">
       <div id="navbar"></div>
       <h2 class="title is-4 is-size-5-touch has-text-centered">Provably-fair guess game</h2>
-      <h3 class="subtitle is-5 is-size-6-touch has-text-centered">Earn Matic using Chainlink's verifiable random numbers on Polygon's low gas chain</h3>
+      <h3 class="subtitle is-5 is-size-6-touch has-text-centered">Earn Matic by using Chainlink's verifiable random numbers on Polygon's low gas chain</h3>
       <div id="rules_modal" class="modal">
         <div class="modal-background"></div>
         <div id="rules_modal_card" class="modal-card">
